# Aether-AI

./: .env.example  .env.secure  .env.test  .gitignore  AETHER.bat  AETHER_FINAL_COMPLETE_SUMMARY.md  AETHER_IS_WORKING.md  AETHER_POWER_STATUS.md  AETHER_RUN.bat  AETHER_START.bat  AETHER_SUCCESS_REPORT.md  AETHER_UPGRADE_V4_COMPLETE.md  AETHER_V1.5_FINAL_STATUS.md  AETHER_v0.3.0_COMPLETE.md  AETHER_v1.7_TASK_COMPLETION_FIX.md  ALL-FILES-GUIDE.txt  ALL-IN-ONE.bat  ALL_20_FEATURES_COMPLETE.md  ALTERNATIVE_PUSH_METHODS.md  ANDROID_READY.txt  ANDROID_SETUP.md  ANTHROPIC_MCP_VS_AETHER.md  APP_READY.md  AUTONOMOUS_BOUNTY_FEATURE.md  AUTONOMOUS_MODE_UPGRADE.md  BACKEND_STATUS.md  BLUEPRINT_HINDI.md  BUG-BOUNTY-FEATURES.txt  BUG-BOUNTY-GUIDE.txt  BUG-BOUNTY.bat  BUGBOUNTY_AUTOPILOT.md  BUGBOUNTY_COMPLETE.md  BUGBOUNTY_QUICKSTART.md  BUGBOUNTY_REPORT.md  BUGBOUNTY_SESSION_SUMMARY.md  BUG_BOUNTY_REPORT_2026-02-16.md  BUG_FIX_REPORT.md  BUILD_ANDROID.bat  BUILD_APP.bat  BUILD_WINDOWS_APP.bat  (+275 more)
AetherCPP/: CMakeLists.txt
AetherCPP/audio/: AudioProcessor.cpp  AudioProcessor.hpp
AetherSharp/: AetherSharp.csproj
AetherSwift/: Package.swift
aether-rust/: Cargo.toml  build_rust.py
aether-rust/src/: crypto.rs  lib.rs  network.rs  python_ffi.rs  secure_storage.rs
android/: build.gradle  settings.gradle
backups/: .env.backup_20260217_181758
data/: costs.json  permissions.json  user_settings.json
docker/: Dockerfile
docs/: BUGBOUNTY_AUTOMATION.md  BUGBOUNTY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  OPENCLAW.md  PC_CONTROL_GUIDE.md  PERSONALITY_CUSTOMIZATION.md  TTS_GUIDE.md  VOICE_PIPELINE.md
examples/: .env.assistant  .env.bugbounty  burpsuite_complete_workflow.py
k8s/: deployment.yaml
mobile/: App.android.js
n8n-workflows/: README.md  ai-chatbot.json  bug-bounty-automation.json
plugins/: calculator.py  system_info.py  web_search.py
prometheus/: prometheus.yml
scripts/: aether_doctor.ps1  migrate_v0.9.0.py  setup.py  setup_live_testing.bat  setup_npu_optimization.py  test_automation_engine.py  test_bugbounty.py  test_conversation_engine.py  test_conversation_manual.py  test_openclaw.py  test_providers.py  test_tts_pipeline.py  test_voice_pipeline.py  test_voice_pipeline_integration.py  verify_installation.py  verify_v0.2.0_upgrade.py
src/: __init__.py  config.py  main.py
src-ts/: .env.example  package-lock.json  package.json  tsconfig.json
src/api/: main.py  (+6 more)
src/monitoring/rust-detector/: Cargo.toml
src/monitoring/rust-detector/src/: main.rs
tests/: conftest.py  test_autonomous_system.py  test_bugbounty_enhancements.py
ui/: .env.example  FIX_UI.bat  IMPLEMENTATION_SUMMARY.md  INSTALL_DEPS.bat  JARVIS_UI_SETUP.md  README.md  RESTART_UI_FRESH.bat  RUN_FLOATING_ORB.md  START_REACT_ONLY.bat  START_UI_CLEAN.bat  UI_UX_v1.0.0_FEATURES.md  ULTIMATE_FIX.bat  electron-builder.json  main.js  package.json  playwright.config.js  start-dev.bat  start-jarvis-ui.bat  start-ui.bat
ui-ts/: index.html  package-lock.json  package.json
(+440 files in other folders)
